Fix stretched extension icons

--- a/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
+++ b/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
@@ -471,10 +471,10 @@ browser[type=content] > html {
 #navigator-toolbox * toolbarbutton:not(#tabs-newtab-button) image,
 #navigator-toolbox * toolbarbutton:not(#tabs-newtab-button) stack {
 	width:      calc(var(--button-size) + 10px) !important;
-	height:     var(--tab-min-height) !important;
-	max-height: var(--tab-min-height) !important;
-	padding:    0px 5px 0px 5px    !important;
-	margin:     0px 0px 0px 0px    !important;
+	height:     calc(var(--button-size) + 10px) !important;
+	max-height: var(--tab-min-height)  !important;
+	padding:    5px 5px 5px 5px        !important;
+	margin:     -5px 0px -5px 0px      !important;
 }
 #navigator-toolbox #downloads-indicator-anchor #downloads-indicator-progress-outer #downloads-indicator-progress-inner,
 #navigator-toolbox #downloads-indicator-anchor #downloads-indicator-progress-outer {
